# gaze-ocr

./: .gitignore  setup.py
gaze_ocr/: eye_tracking.py
gaze_ocr/tobii4c/: CMakeLists.txt  etpy.pyx  eyetracker.cpp  eyetracker.h
